#F-284 Fixed Use Path.of() — the modern factory method on the Path interface